<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserDataActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/profile_picture"
            android:layout_gravity="center_horizontal"
            android:id="@+id/avatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/avatar" />

        <TextView
            android:textSize="16sp"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16sp"
            android:background="#99FF99"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/email"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/web" />

            <TextView
                android:textSize="16sp"
                android:id="@+id/email"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="?android:attr/colorForeground"
            android:orientation="horizontal"
            android:padding="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/phone"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/technology" />

            <TextView
                android:textSize="16sp"
                android:gravity="center"
                android:id="@+id/phonenumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="?android:attr/colorForeground"
            android:orientation="horizontal"
            android:padding="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/education"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/graduation" />

            <TextView
                android:textSize="16sp"
                android:gravity="center"
                android:id="@+id/university"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/university" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="?android:attr/colorForeground"
            android:orientation="horizontal"
            android:padding="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/subjects"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/favorite" />

            <TextView
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/subjects" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="?android:attr/colorForeground"
            android:orientation="horizontal"
            android:padding="4dp" />

    </LinearLayout>


</RelativeLayout>
