<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bh.android.snapasktest.QuestionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/questioner_profile_picture"
                        android:id="@+id/questioner_avatar"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/avatar" />

                    <TextView
                        android:id="@+id/questioner_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/timestamp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/placeholder" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:contentDescription="@string/attachment"
                android:id="@+id/questioner_Attachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/answerer"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/answerer_profile_picture"
                        android:id="@+id/answerer_avatar"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/avatar" />

                    <TextView
                        android:id="@+id/answerer_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_toStartOf="@+id/answerer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/placeholder">

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
